# gridlab-d

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  mkdocs.yml  tree.txt  tree_to_toc.py
.github/workflows/: cpack-all.yml  pull_request_validation.yml
docs/: README.md  TODO.md  conf.py  index.md  index.rst  mkdocs.yml  requirements.txt
docs/custom_blocks/: Contact.md  Latex.mdx
docs/docs/: _order.yaml  outline.md  tree.txt
docs/docs/0.0 GridLAB-D™/: Contacts_list.md  Introduction  Version History.md  _order.yaml  projects.md  publications.md  resources.md  style-guide.md
docs/docs/1.0 Prospective Users/: GridLAB-D_Key_Attributes.md  Technical_Overview.md  _order.yaml
docs/docs/2.0 New Users/: Getting_Started_Using_GridLAB-D.md  Mysql.md  _order.yaml  theory-of-operation.md
docs/docs/3.0 Modeling/: CSV_reader_(climate_class).md  Commercial_User_Guide.md  Creating_GLM_Files.md  Creating_runtime_modules.md  Database.md  Delta_mode.md  Dev_Commercial.md  Dev_Import_export.md  Dev_Microgrids.md  Dev_filter.md  Droop_inverter.md  ETP_closed_form_solution.md  Energy_storage.md  Engine_link.md  Engine_protocol.md  Escape_character.md  Evcharger.md  Evcharger_det.md  Event_trace_filter.md  GLM_Loading_FAQ.md  GLM_syntax.md  Generators_Module_Guide.md  Generic_Schedule_Object.md  Heartbeat.md  Histogram.md  History.md  House.md  HowTo_Create_a_movie.md  HowTo_mysql.md  Hybrid_Electric_Vehicle_Chargers.md  Lights.md  (+103 more)
gldcore/: CMakeLists.txt  validate.cpp
test_gldapi/: CMakeLists.txt  README.md  build_script  test_gldapi.cpp
test_gldapi/cmake/: FindGridLabD.cmake
(+273 files in other folders)
